# asv_simulator

./: CMakeLists.txt  colcon_errors.txt  package.xml  recap_structure_and_problems.txt  troubleshooting_summary.txt
configs/: depth_map.tif  internal_bay_deposit_resampled.tif  map_server_params.yaml  slam_params.yaml  vessel_viz.rviz
include/asv_simulator/: PolyhedronVolume.hh  Surface.hh  WaveVisual.hh
install/: local_setup.sh  setup.sh
install/asv_simulator/lib/asv_simulator/: virtual_sonar.py
install/asv_simulator/share/ament_index/resource_index/package_run_dependencies/: asv_simulator
install/asv_simulator/share/ament_index/resource_index/parent_prefix_path/: asv_simulator
install/asv_simulator/share/asv_simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/asv_simulator/share/asv_simulator/cmake/: asv_simulatorConfig-version.cmake  asv_simulatorConfig.cmake
install/asv_simulator/share/asv_simulator/configs/: depth_map.tif  internal_bay_deposit_resampled.tif  vessel_viz.rviz
install/asv_simulator/share/asv_simulator/environment/: ament_prefix_path.dsv  path.dsv
install/asv_simulator/share/asv_simulator/include/: depth_table.csv
install/asv_simulator/share/asv_simulator/include/asv_simulator/: PolyhedraBuoyancyDrag.hh  PolyhedronVolume.hh  ShapeVolume.hh  Surface.hh  WaveVisual.hh  Wavefield.hh
install/asv_simulator/share/asv_simulator/launch/: sim.launch.py
install/asv_simulator/share/asv_simulator/models/depths/: model.config
install/asv_simulator/share/asv_simulator/models/depths/meshes/: depth.stl
install/asv_simulator/share/asv_simulator/models/harbour/: model.config  model.sdf
install/asv_simulator/share/asv_simulator/models/harbour/meshes/: map.stl
install/asv_simulator/share/asv_simulator/models/vessel_v1/: model.config  vessel_v1.sdf
install/asv_simulator/share/asv_simulator/models/vessel_v2/: model.config  vessel_v2.sdf
install/asv_simulator/share/asv_simulator/models/vessel_v2/meshes/: vessel_propeller_simplified.stl  vessel_simplified.stl
install/asv_simulator/share/asv_simulator/models/vessel_v3/: model.config  vessel_v3.sdf
install/asv_simulator/share/asv_simulator/models/vessel_v3/meshes/: vessel_propeller_simplified.stl  vessel_simplified.stl
install/asv_simulator/share/asv_simulator/urdf/: vessel_v2.urdf
install/asv_simulator/share/asv_simulator/worlds/: ocean_world.sdf  ocean_world_waves.sdf
launch/: sim.launch.py
log/: latest_build
map/: map.yaml
models/depths/: model.config
models/depths/meshes/: depth.stl
models/harbour/: model.config  model.sdf
models/harbour/meshes/: map.stl
models/vessel_v1/: model.config  vessel_v1.sdf
models/vessel_v2/: model.config  vessel_v2.sdf
models/vessel_v2/meshes/: vessel_propeller_simplified.stl  vessel_simplified.stl
models/vessel_v3/: model.config  vessel_v3.sdf
plugins/: PolyhedraBuoyancyDrag.cc  PolyhedraBuoyancyDrag.hh  PolyhedronVolume.cc  ShapeVolume.cc  ShapeVolume.hh  Surface.cc  WaveVisual.cc  Wavefield.cc  Wavefield.hh
scripts/: gazebo_odom.py  virtual_sonar.py
urdf/: README.txt  vessel_v2.urdf  vessel_v2_pose.urdf
worlds/: ocean_world.sdf  ocean_world_waves.sdf
